--- a/serenity.properties
+++ b/serenity.properties
@@ -3,3 +3,5 @@
 # serenity.project.name = Serenity Test Suite Using JUnit
 # serenity.test.root=starter
 
+# CHROME OPTIONS
+#webdriver.chrome.driver=webdrivers/chromedriver.exe
