--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,6 +1,7 @@
 serenity {
   take.screenshots = FOR_FAILURES
-  test.root = "starter.acceptancetests"
+  test.root = "serenityswag.acceptancetests"
+  logging = verbose
 }
 
 headless.mode = false
